Changed homepage text to coming soon message

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,7 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="container mt-5">
+  <h1>Coming soon....</h1>
+  <p>
+    Thanks for visiting! This page is currently under development.
+    It will be up and running by 28/02/2020 => check back then!
+  </p>
+</div>
