adding fonts and color

--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -8,3 +8,10 @@ $orange: #E67E22;
 $green: #1EDD88;
 $gray: #0E0000;
 $light-gray: #F4F4F4;
+
+// Custom color
+$white: #F7F9F9;
+$pastel-red: #EF6461;
+$body-color: #011627;
+$header-color: #172A3A;
+$btn-color:#D8E0FF;
