--- a/app/views/planets/show.html.erb
+++ b/app/views/planets/show.html.erb
@@ -1,4 +1,4 @@
 <h1>Show Page</h1>
 
 <%= @planet.name %>, Capacity: <%= @planet.capacity %>, Rate: $<%= @planet.rate %>/ week
-<%= link_to "Edit", edit_planet_path %> <%= link_to "Delete", planet_path, method: "DELETE" %>
+<%= link_to "Edit", edit_planet_path %> <%= link_to "Delete", planet_path, method: "DELETE", data: { confirm: "Are You Sure You Want to Destroy #{@planet.name}?"} %>
