--- a/app/views/planets/show.html.erb
+++ b/app/views/planets/show.html.erb
@@ -2,3 +2,4 @@
 
 <%= @planet.name %>, Capacity: <%= @planet.capacity %>, Rate: $<%= @planet.rate %>/ week
 <%= link_to "Edit", edit_planet_path %> <%= link_to "Delete", planet_path, method: "DELETE", data: { confirm: "Are You Sure You Want to Destroy #{@planet.name}?"} %>
+<%= link_to "Book!", new_planet_booking_path(@planet) %>
