--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -1,9 +1,11 @@
 .avatar {
-  width: 40px;
+  width: 35px;
+  height: 35px;
   border-radius: 50%;
 }
 .avatar-large {
   width: 56px;
+  height: 56px;
   border-radius: 50%;
 }
 .avatar-bordered {
