--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -29,3 +29,11 @@
   color: $header-color;
   text-align: center
 }
+.add-btn{
+  color:$header-color;
+  opacity: 0.7;
+  &:hover{
+  color:$header-color;
+  opacity: 1;
+  }
+}
