--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -4,14 +4,14 @@
   border-radius: 10px;
   background: $btn-color;
   transition: background 0.3s ease;
-  text-align: center
+  text-align: center;
 }
 
 .btn-rounded:hover {
   background: $btn-color;
   color: $header-color;
   text-decoration: none;
-  text-align: center
+  text-align: center;
 }
 
 .ghost {
