--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,26 +1,72 @@
-<h2>This is the DASHBOARD!</h2>
-<ul>
-  <% @planets.each do |planet| %>
-    <li><%= cl_image_tag planet.photos.first.key, height: 300, width: 400, crop: :fill %>
-        <%= link_to planet.name, planet_path(planet) %>
-        Capacity: <%= planet.capacity %>
-        Rate: <%= planet.rate %>
-        Environment: <%= planet.environment.name %>
-        <i class="<%= planet.environment.icon %>"></i>
-    </li>
+<div class="container mt-5">
+<h1>Tokotai <%= current_user.nickname %> !</h1>
+
+<h2>Keep exploring</h2>
+<div class="planet-grid">
+  <% @planets.take(2).each do |planet| %>
+    <%= link_to planet_path(planet) do %>
+     <div class="card-planet">
+        <%= cl_image_tag planet.photos.first.key, height: 300, width: 400, crop: :fill %>
+        <div class="card-planet-infos">
+          <div class="card-planet-infos-text">
+            <h2> <%= planet.name %></h2>
+            <p><%= planet.longitude %> <%= planet.latitude %></p>
+            <div class="card-planet-infos-icons">
+              <i class="fab fa-reddit-alien"></i><span><%= planet.capacity %></span>
+              <i class="<%= planet.environment.icon %>"></i>
+            </div>
+          </div>
+          <div class="card-planet-infos-price">
+            <p>Rate:</p>
+            <div class="card-planet-pricing">
+              <p><%= planet.rate %></p>
+            </div>
+          </div>
+        </div>
+      </div>
+    <% end %>
   <% end %>
-</ul>
+</div>
+
+ <h2>My trips</h2>
+ <% @bookings.each do |booking| %>
+ <% unless booking.completed? %>
+    <div class="trip-card">
+        <div class="trip-notif">
+          <% if current_user.avatar.attached? %>
+            <%= cl_image_tag booking.planet.user.avatar.key, class: "avatar" %>
+          <% else %>
+            <%= image_tag "no-profile.jpeg", class: "avatar" %>
+          <% end %>
+          <p>Request sent to <%= booking.planet.user.first_name %></p>
+        </div>
+        <div class="trip-details">
+            <%= cl_image_tag booking.planet.photos.first.key %>
+          <div class="trip-info">
+            <div class="trip-header">
+              <h2><%= booking.planet.name %></h2>
+              <p>Long: <%= booking.planet.longitude %> Lat: <%= booking.planet.latitude %></p>
+            </div>
+            <div class="trip-booking-info">
+              <div class="trip-icons">
+                <i class="fab fa-reddit-alien"></i> <span> <%= booking.planet.capacity %></span>
+                <i class="<%= booking.planet.environment.icon %>"></i>
+              </div>
+              <div class="trip-price">
+                <p>Total</p>
+                <p><%= booking.cost %></p>
+              </div>
+            </div>
+            <% unless booking.approved? %>
+            <div class="trip-footer">
+              <p> <strong>Status:</strong> pending...</p>
+            </div>
+            <% end %>
+          </div>
+        </div>
+    </div>
+  <% end %>
+  <% end %>
+</div>
 
 
-<ul>
-  <% @bookings.each do |booking| %>
-    <li>
-        <%= booking.start %>,
-        <%= booking.end %>,
-        <%= booking.duration %>,
-        <%= booking.cost %>,
-        <%= booking.approved? %>,
-        <%= booking.completed? %>,
-    </li>
-  <% end %>
-</ul>
