Figuring out PG Search, merging with new Policy Updates and then going back to work on Search Feature

--- a/app/views/planets/index.html.erb
+++ b/app/views/planets/index.html.erb
@@ -7,6 +7,16 @@
   <% end %>
 <% end %>
 
+<%= form_tag planets_path, method: :get do %>
+  <%= text_field_tag :query,
+    params[:query],
+    class: "form-control",
+    placeholder: "Exploration Keyword"
+  %>
+  <!-- TODO change this button to something better -->
+  <%= submit_tag "Explore", class: "btn btn-primary" %>
+<% end %>
+
 
 <div class="planet-grid">
 <% @planets.each do |planet| %>
