Updated show page to hide links when not logged in

--- a/app/views/planets/show.html.erb
+++ b/app/views/planets/show.html.erb
@@ -59,23 +59,22 @@
     <img src="https://cimtchau.ca/app/uploads/ciel.jpg" alt="Solar system">
   </div>
 </div>
-      <% if policy(Booking).create? %>
-        <div class="foot fixed-bottom">
-        <%= link_to "Book!", new_planet_booking_path(@planet), class: "btn-rounded" %>
-        </div>
-      <% end %>
 
-    </div>
 
-  <% if policy(@planet).update? %>
-      <div class="foot fixed-bottom">
-          <%= link_to "Edit", edit_planet_path, class: "btn-rounded" %>
+<% if current_user && policy(Booking).create? %>
+  <div class="foot fixed-bottom">
+    <%= link_to "Book!", new_planet_booking_path(@planet), class: "btn-rounded" %>
+  </div>
+<% end %>
 
-        <% end %>
+<div class="foot fixed-bottom">
+  <% if current_user && policy(@planet).update? %>
+    <%= link_to "Edit", edit_planet_path, class: "btn-rounded" %>
+  <% end %>
 
-        <% if policy(@planet).destroy? %>
-          <%= link_to "Delete", planet_path,
-              method: "DELETE",
-              data: { confirm: "Are You Sure You Want to Destroy #{@planet.name}?"}, class: "btn-rounded" %>
-        <% end %>
-      </div>
+  <% if current_user && policy(@planet).destroy? %>
+    <%= link_to "Delete", planet_path,
+        method: "DELETE",
+        data: { confirm: "Are You Sure You Want to Destroy #{@planet.name}?"}, class: "btn-rounded" %>
+  <% end %>
+</div>
