--- a/app/assets/stylesheets/components/_trip-list.scss
+++ b/app/assets/stylesheets/components/_trip-list.scss
@@ -10,7 +10,7 @@
   align-items: center;
   padding: 8px 0px;
   margin-left:8px;
-  width: 100%
+  width: 100%;
   p {
     margin: 0;
     line-height: 1.4;
