--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -71,21 +71,81 @@
 
   <% if current_user.overlord? %>
     <h2>My planets</h2>
+    <div class="my-planet-grid">
       <% current_user.planets.each do |planet| %>
-      <div class="my-planet-card">
+        <div class="my-planet-card">
           <%= cl_image_tag planet.photos.first.key, height: 300, width: 400, crop: :fill %>
           <div class="my-planet-infos">
             <div>
               <h2><%= planet.name %></h2>
               <p><%= planet.longitude %> <%= planet.latitude %></p>
-              <i class="fab fa-reddit-alien"></i><span><%= planet.capacity %></span>
-              <i class="<%= planet.environment.icon %>"></i>
+              <div class="my-planet-icons">
+                <p><i class="fab fa-reddit-alien"></i><%= planet.capacity %></p>
+                <p><i class="<%= planet.environment.icon %>"></i></p>
+              </div>
             </div>
             <span><p>Rate:</p><h2 class="my-planet-pricing"> <%= planet.rate %></h2></span>
           </div>
-       </div>
+        </div>
       <% end %>
-  <% end %>
+    </div>
+
+    <h2>Requests</h2>
+    <% @bookings.each do |booking| %>
+    <% unless booking.completed? %>
+       <div class="trip-card">
+           <div class="trip-notif">
+             <% if booking.user.avatar.attached? %>
+               <%= cl_image_tag booking.user.avatar.key, class: "avatar" %>
+             <% else %>
+               <%= image_tag "no-profile.jpeg", class: "avatar" %>
+             <% end %>
+             <p><%= booking.planet.user.first_name %> sent you a request</p>
+           </div>
+           <div class="trip-details">
+               <%= cl_image_tag booking.planet.photos.first.key %>
+             <div class="trip-info">
+               <div class="trip-header">
+                 <h2><%= booking.planet.name %></h2>
+                 <p>Long: <%= booking.planet.longitude %> Lat: <%= booking.planet.latitude %></p>
+               </div>
+               <div class="trip-booking-info">
+                 <div class="trip-icons">
+                   <i class="fab fa-reddit-alien"></i> <span> <%= booking.planet.capacity %></span>
+                   <i class="<%= booking.planet.environment.icon %>"></i>
+                 </div>
+                 <div class="trip-price">
+                   <p>Total</p>
+                   <p><%= booking.cost %></p>
+                 </div>
+               </div>
+               <% unless booking.approved? %>
+               <div class="trip-footer">
+                 <%= link_to approve_booking_path, class: "btn-approve" do %>
+
+                 <% end %>
+               </div>
+               <% end %>
+             </div>
+           </div>
+       </div>
+     <% end %>
+     <% end %>
+
+    <% end %>
+
+
+
+
+
+
+
+
+
+
+
+
+
 </div>
 
 
