--- a/app/views/planets/_planet_form.html.erb
+++ b/app/views/planets/_planet_form.html.erb
@@ -6,7 +6,7 @@
   <%= f.input :description %>
   <%= f.input :rate%>
   <%= f.input :capacity %>
-  <%= f.association :environment, as: :radio_buttons, label_method: env_lab %>
+  <%= f.association :environments, as: :check_boxes, label_method: env_lab %>
   <%= f.input :photos, as: :file, input_html: { multiple: true } %>
   <%= f.button :submit, class:"btn-rounded" %>
 <% end %>
