--- a/app/views/planets/show.html.erb
+++ b/app/views/planets/show.html.erb
@@ -50,7 +50,13 @@
   <h2>Environments</h2>
   <br>
   <div class="env-infos">
-    <i class="<%=@planet.environment.icon%>"></i><span><%= @planet.environment.description %></span>
+    <% @planet.environments.each do |env| %>
+      <span>
+        <i class="<%= env.icon %>"></i>&nbsp;
+        <%= env.description %>
+      </span>
+      <br>
+    <% end %>
   </div>
 
   <div class="localisation">
