--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -5,7 +5,6 @@ $red: #FD1015;
 $blue: #167FFB;
 $yellow: #FFC65A;
 $orange: #E67E22;
-$green: #1EDD88;
 $gray: #0E0000;
 
 // Custom color
@@ -15,3 +14,4 @@ $body-color: #011627;
 $header-color: #172A3A;
 $btn-color:#D8E0FF;
 $light-gray: #E8E8E8;
+$green: #21bf73;
