Updated 'change password' and added favicon, also checked Back button paths

--- a/app/views/planets/show.html.erb
+++ b/app/views/planets/show.html.erb
@@ -25,8 +25,8 @@
       <span class="sr-only">Next</span>
     </a>
   </div>
-
-    <%= link_to "< back", dashboard_path, class: "showa" %>
+    <!-- TODO style this button -->
+    <%= link_to "< back", planets_path, class: "showa" %>
 
 
 
