--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -33,7 +33,8 @@
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
             <span class="dropdown-item"><%= current_user.first_name%> <%= current_user.last_name%></span>
             <hr>
-            <%= link_to "Change password", edit_user_password_path, class: "dropdown-item" %>
+            <!-- registration path is needed for a user to edit password WHILE LOGGED IN, otherwise it will think you have *forgotten* your password -->
+            <%= link_to "Change password", edit_user_registration_path, class: "dropdown-item" %>
             <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
           </div>
         </li>
