--- a/app/views/planets/index.html.erb
+++ b/app/views/planets/index.html.erb
@@ -8,8 +8,6 @@
     class: "form-control",
     placeholder: "Exploration Keyword"
   %>
-  <!-- TODO change this button to something better -->
-  <%= submit_tag "Explore", class: "btn btn-primary" %>
 <% end %>
 
 <div class="planet-grid">
@@ -22,20 +20,21 @@
       <div class="card-planet-infos-text">
         <h2> <%= planet.name %></h2>
         <p><%= planet.longitude %> <%= planet.latitude %></p>
-        <div class="card-planet-infos-icons">
-          <i class="fab fa-reddit-alien"></i><span><%= planet.capacity %></span>
+        <p class="card-planet-infos-icons">
+          <i class="fab fa-reddit-alien"></i>
+          <span><%= planet.capacity %></span>&nbsp;&nbsp;
           <% planet.environments.each do |env| %>
-            <i class="<%= env.icon %>"></i>
+            <i class="<%= env.icon %>"></i>&nbsp;&nbsp;
           <% end %>
-        </div>
-        </div>
+        </p>
+      </div>
 
-        <div class="card-planet-infos-price">
-          <p>Rate:</p>
-          <div class="card-planet-pricing">
-            <p><%= planet.rate %></p>
-          </div>
+      <div class="card-planet-infos-price">
+        <p>Rate:</p>
+        <div class="card-planet-pricing">
+          <p><%= planet.rate %></p>
         </div>
+      </div>
 
     </div>
 
