--- a/app/assets/stylesheets/components/_my-planet-card.scss
+++ b/app/assets/stylesheets/components/_my-planet-card.scss
@@ -1,3 +1,8 @@
+.header-explore{
+  display:flex;
+  justify-content: space-between;
+  align-items: baseline;
+}
 .my-planet-grid{
   display:grid;
   grid-template-columns: 1fr 1fr 1fr;
@@ -9,10 +14,13 @@
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
   margin: 24px 0;
   border-radius: 5px;
+  position: relative;
+  z-index: 25;
     img {
     height: 200px;
     width: 100%;
     object-fit: cover;
+    position:relative;
     }
     h2 {
       font-size: 16px;
@@ -30,21 +38,37 @@
       display: flex;
       justify-content: space-between;
       align-items: flex-end;
-      position: relative;
+      top: 16px;
+      left: 8px;
     }
-}
-.my-planet-infos {
-  .my-planet-user {
-    position: absolute;
-    right: 16px;
-    top: -20px;
-    width: 40px;
-  }
+
   .my-planet-icons{
     display: flex;
     justify-content: space-between;
   }
+  .destroy-icon{
+    position: absolute;
+    color: $pastel-red;
+    padding:8px;
+    right: 8px;
+    top: 8px;
+    z-index: 300;
+    font-size: 24px;
+  }
+  .edit-icon{
+    position: absolute;
+    color: $green;
+    padding:8px;
+    left: 8px;
+    top: 8px;
+    z-index: 300;
+    font-size: 24px;
+  }
+
 }
+
+
+
 
 
 @media(max-width: 768px) {
